--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,6 +11,7 @@
 			"skipFiles": [
 				"<node_internals>/**"
 			],
+			"runtimeArgs": ["--trace-warnings"],
 			"program": "${workspaceFolder}\\index.js"
 		},
 		{
