--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "mysql2": "^2.2.5",
-    "parse-multipart-data": "^1.2.0"
+    "parse-multipart-data": "^1.2.0",
+    "sharp": "^0.28.3"
   }
 }
