emails send upload files and images nodePrevs miantain mode

--- a/.ENV
+++ b/.ENV
@@ -8,8 +8,8 @@ EMAIL_FROM=test@test.com
 APP_TITLE=distrib engine
 
 DB_HOST=127.0.0.1
-DB_USER=unfo.pro
-DB_PASS=zBjgZW2s
+DB_USER=root
+DB_PASS=
 DB_NAME=distrib_db
 
 
