--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "mysql2": "^2.2.5",
+    "nodemailer": "^6.6.2",
     "parse-multipart-data": "^1.2.0",
     "sharp": "^0.28.3"
   }
