--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
 	"javascript.suggest.paths": true,
 	"files.exclude": {
+		"**/www/**": true,
 		"**/cert/**": true,
 		"**/nginx-1.20.1/**": true
 	}
