--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "codemirror": "^5.62.0",
     "dotenv": "^10.0.0",
+    "jquery": "^3.6.0",
+    "moment": "^2.29.1",
     "mysql2": "^2.2.5",
     "nodemailer": "^6.6.2",
     "parse-multipart-data": "^1.2.0",
+    "react": "^17.0.2",
+    "react-cropper": "^2.1.8",
+    "react-datetime": "^3.0.4",
+    "react-dom": "^17.0.2",
     "sharp": "^0.28.3"
   }
 }
