--- a/www/.vscode/launch.json
+++ b/www/.vscode/launch.json
@@ -15,7 +15,7 @@
             "vueComponentPaths": [],
             "enableContentValidation": false,
 			"pauseForSourceMap": true,
-            "url": "https://node-db-ui.com:1443/#n/82/r/1",
+            "url": "https://node-db-ui.com:1443/#n/5/r/3/e",
 			"userDataDir": "C:\\tmp\\userdir"
 		}
 	]
