event-processing-mixins return

--- a/.ENV
+++ b/.ENV
@@ -10,7 +10,7 @@ APP_TITLE=distrib engine
 DB_HOST=127.0.0.1
 DB_USER=root
 DB_PASS=
-DB_NAME=distrib_db
+DB_NAME=node_distrib
 
 
 DEPLOY_TO=http://test.server.org
