--- a/www/.vscode/launch.json
+++ b/www/.vscode/launch.json
@@ -15,6 +15,7 @@
             "vueComponentPaths": [],
             "enableContentValidation": false,
 			"pauseForSourceMap": true,
+			"cleanUp": false,
             "url": "https://node-db-ui.com:1443/#n/5/r/3/e",
 			"userDataDir": "C:\\tmp\\userdir"
 		}
