events handlers added

--- a/.ENV
+++ b/.ENV
@@ -1,7 +1,7 @@
 SERVER_NAME=http://distrib.ru
 DEBUG=true
 ADMIN_ENABLED_DEFAULT=true
-ERROR_NOTIFY_EMAIL=[vasiliy.p.kostin@gmail.com]
+ERROR_NOTIFY_EMAIL=vasiliy.p.kostin@gmail.com,example@example.com
 
 EMAIL_FROM=test@test.com
 
