--- a/www/.vscode/launch.json
+++ b/www/.vscode/launch.json
@@ -9,18 +9,18 @@
 			"request": "launch",
 			"name": "Client",
 			"webRoot": "${workspaceRoot}",
-            "outFiles": [],
+			"outFiles": [],
 			"disableNetworkCache": true,
-            "sourceMaps": false,
+			"sourceMaps": false,
 			"skipFiles": [
 				"<node_internals>/**",
 				"**/lib/**"
 			],
-            "vueComponentPaths": [],
-            "enableContentValidation": false,
+			"vueComponentPaths": [],
+			"enableContentValidation": false,
 			"pauseForSourceMap": true,
 			"cleanUp": false,
-            "url": "https://node-db-ui.com:1443/#n/5/r/3/e",
+			"url": "https://node-db-ui.com:1443/#n/82",
 			"userDataDir": "C:\\tmp\\userdir"
 		}
 	]
