fields creation fixes

--- a/www/.vscode/launch.json
+++ b/www/.vscode/launch.json
@@ -20,7 +20,7 @@
 			"enableContentValidation": false,
 			"pauseForSourceMap": true,
 			"cleanUp": false,
-			"url": "https://node-db-ui.com:1443/#n/82/r/new/e",
+			"url": "https://node-db-ui.com:1443/#n/6/r/new/e/j/%7B%22prior%22%3A31%2C%22node_fields_linker%22%3A%7B%22id%22%3A82%2C%22name%22%3A%22MyRecord%22%7D%7D",
 			"userDataDir": "C:\\tmp\\userdir"
 		}
 	]
