--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@popperjs/core": "^2.9.2",
+    "bootstrap": "^3.4.1",
     "codemirror": "^5.62.0",
     "dotenv": "^10.0.0",
     "jquery": "^3.6.0",
@@ -16,10 +18,12 @@
     "mysql2": "^2.2.5",
     "nodemailer": "^6.6.2",
     "parse-multipart-data": "^1.2.0",
+    "popper.js": "^1.14.3",
     "react": "^17.0.2",
     "react-cropper": "^2.1.8",
     "react-datetime": "^3.0.4",
     "react-dom": "^17.0.2",
-    "sharp": "^0.28.3"
+    "sharp": "^0.28.3",
+    "summernote": "^0.8.18"
   }
 }
