--- a/www/.vscode/launch.json
+++ b/www/.vscode/launch.json
@@ -12,15 +12,11 @@
 			"outFiles": [],
 			"disableNetworkCache": true,
 			"sourceMaps": false,
-			"skipFiles": [
-				"<node_internals>/**",
-				"**/lib/**"
-			],
 			"vueComponentPaths": [],
 			"enableContentValidation": false,
 			"pauseForSourceMap": true,
 			"cleanUp": false,
-			"url": "https://node-db-ui.com:1443/#n/82/r/2/e",
+			"url": "https://node-db-ui.com:1443/#n/4/r/new/e/j/%7B%22prior%22%3A12%2C%22_nodesID%22%3A%7B%22id%22%3A2%2C%22name%22%3A%22All%20sections%22%7D%7D",
 			"userDataDir": "C:\\tmp\\userdir"
 		}
 	]
