--- a/www/.vscode/launch.json
+++ b/www/.vscode/launch.json
@@ -16,7 +16,7 @@
 			"enableContentValidation": false,
 			"pauseForSourceMap": true,
 			"cleanUp": false,
-			"url": "https://node-db-ui.com:1443/#n/4/r/new/e/j/%7B%22prior%22%3A12%2C%22_nodesID%22%3A%7B%22id%22%3A2%2C%22name%22%3A%22All%20sections%22%7D%7D",
+			"url": "https://node-db-ui.com:1443/#n/52/r/1/e",
 			"userDataDir": "C:\\tmp\\userdir"
 		}
 	]
