--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-cropper": "^2.1.8",
     "react-datetime": "^3.0.4",
     "react-dom": "^17.0.2",
+    "react-highlight-words": "^0.17.0",
     "reset-css": "^5.0.1",
     "sharp": "^0.28.3",
     "summernote": "^0.8.18"
