handlers editor fixes

--- a/www/.vscode/launch.json
+++ b/www/.vscode/launch.json
@@ -16,7 +16,7 @@
 			"enableContentValidation": false,
 			"pauseForSourceMap": true,
 			"cleanUp": false,
-			"url": "https://node-db-ui.com:1443/#n/82/f/o/name/r/1/s/122",
+			"url": "https://node-db-ui.com:1443/#n/82/r/2/e",
 			"userDataDir": "C:\\tmp\\userdir"
 		}
 	]
