--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,7 @@
 {
 	"compilerOptions": {
-		"target": "es5",
+		"checkJs": true,
+		"target": "es2021",
 		"rootDir": ".",
 		"baseUrl": ".",
 		"paths": {
