--- a/www/.vscode/settings.json
+++ b/www/.vscode/settings.json
@@ -2,5 +2,6 @@
 	"editor.formatOnSave": true,
 	"files.exclude": {
 		"**/uploads/**": true
-	}
+	},
+	"js/ts.implicitProjectConfig.checkJs": false
 }
