--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "reset-css": "^5.0.1",
     "sharp": "^0.28.3",
     "summernote": "^0.8.18"
+  },
+  "devDependencies": {
+    "promise-polyfill": "^8.2.0"
   }
 }
