--- a/www/.vscode/launch.json
+++ b/www/.vscode/launch.json
@@ -20,7 +20,7 @@
 			"enableContentValidation": false,
 			"pauseForSourceMap": true,
 			"cleanUp": false,
-			"url": "https://node-db-ui.com:1443/#n/82/r/2/e",
+			"url": "https://node-db-ui.com:1443/",
 			"userDataDir": "C:\\tmp\\userdir"
 		},
 		{
