--- a/www/.vscode/launch.json
+++ b/www/.vscode/launch.json
@@ -14,7 +14,7 @@
 			"sourceMaps": false,
 			"skipFiles": [
 				"<node_internals>/**",
-				"**/lib/**"
+				"**/node_modules/**"
 			],
 			"vueComponentPaths": [],
 			"enableContentValidation": false,
