--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build-dev-libs": "node www/webpack.build-dev-libs.js",
+    "test": "echo 'Error: no test specified' && exit 1"
   },
   "author": "",
   "license": "MIT",
@@ -29,6 +30,7 @@
     "summernote": "^0.8.18"
   },
   "devDependencies": {
-    "promise-polyfill": "^8.2.0"
+    "promise-polyfill": "^8.2.0",
+    "webpack": "^5.47.1"
   }
 }
