--- a/www/.vscode/settings.json
+++ b/www/.vscode/settings.json
@@ -2,7 +2,8 @@
 	"editor.formatOnSave": true,
 	"files.exclude": {
 		"**/uploads/**": true,
-		"**/fonts/**": true
+		"**/fonts/**": true,
+		"**/js/libs/src/**": true
 	},
 	"replacerules.rules": {
 		"css_props_fix1": {
