ReactDateTime, ReactCrop, CodeMirror lazy import on demand

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@
 /www/uploads
 /www/js/libs/libs.js
 /www/js/libs.js.LICENSE.txt
+/www/js/libs/react-datetime.js
+/www/js/libs/react-cropper.js
+/www/js/libs/react-datetime.js
+/www/js/libs/code-mirror.js
+
