--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,6 @@
 /www/js/libs.js.LICENSE.txt
 /www/js/libs/react-datetime.js
 /www/js/libs/react-cropper.js
-/www/js/libs/react-datetime.js
 /www/js/libs/code-mirror.js
 
+/www/tsconfig.tsbuildinfo
