--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
 	"editor.formatOnSave": true,
 	"javascript.format.insertSpaceAfterFunctionKeywordForAnonymousFunctions": false,
 	"files.exclude": {
+		"**/dist/**": true,
 		"**/www/**": true,
 		"**/cert/**": true,
 		"**/nginx-1.20.1/**": true
