--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "database UI"
   ],
   "scripts": {
-    "build-dev-libs": "node www/webpack.build-dev-libs.js",
-    "test": "jest --detectOpenHandles"
+    "test": "jest --detectOpenHandles",
+    "build": "tsc -p ./"
   },
   "author": "",
   "license": "MIT",
@@ -34,13 +34,18 @@
     "summernote": "^0.8.18"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.6",
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
     "chromedriver": "^92.0.0",
     "jest": "^27.0.6",
     "promise-polyfill": "^8.2.0",
     "selenium-webdriver": "^4.0.0-beta.4",
-    "webpack": "^5.47.1"
+    "ts-loader": "^9.2.5",
+    "ts-node": "^10.1.0",
+    "typescript": "^4.3.5",
+    "webpack": "^5.48.0",
+    "webpack-cli": "^4.7.2"
   },
   "jest": {
     "verbose": true
