server side ts complete

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
-	"javascript.suggest.paths": true,
+	"typescript.suggest.paths": true,
 	"editor.formatOnSave": true,
-	"javascript.format.insertSpaceAfterFunctionKeywordForAnonymousFunctions": false,
+	"typescript.format.insertSpaceAfterFunctionKeywordForAnonymousFunctions": false,
+	"typescript.format.insertSpaceBeforeFunctionParenthesis": false,
+	"typescript.format.insertSpaceAfterKeywordsInControlFlowStatements": false,
 	"files.exclude": {
 		"**/dist/**": true,
 		"**/www/**": true,
