--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "database UI"
   ],
   "scripts": {
-    "test": "jest --detectOpenHandles",
+    "test": "jest --detectOpenHandles --verbose=true",
     "build": "tsc -p ./"
   },
   "author": "",
