before default exports remove

--- a/www/.vscode/tasks.json
+++ b/www/.vscode/tasks.json
@@ -4,11 +4,7 @@
 		{
 			"type": "npm",
 			"script": "build",
-			"problemMatcher": [
-				"$tsc-watch"
-			],
-			"group": "build",
-			"label": "webpack - watch",
+			"label": "build",
 			"runOptions": {
 			  "runOn": "folderOpen"
 			}
