--- a/package.json
+++ b/package.json
@@ -31,21 +31,24 @@
     "react-highlight-words": "^0.17.0",
     "reset-css": "^5.0.1",
     "sharp": "^0.28.3",
-    "summernote": "^0.8.18"
+    "summernote": "^0.8.18",
+    "@babel/runtime": "^7.15.3"
   },
   "devDependencies": {
-    "@types/jquery": "^3.5.6",
-    "@types/react": "^17.0.15",
-    "@types/react-dom": "^17.0.9",
+    "@babel/cli": "^7.8.3",
+    "@babel/core": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.15.0",
+    "@babel/preset-env": "^7.8.3",
+    "@babel/preset-typescript": "^7.8.3",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-transform-es2015-modules-commonjs-simple": "^6.7.4",
+    "typescript": "^3.7.5",
+    "webpack": "^5.50.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2",
     "chromedriver": "^92.0.0",
     "jest": "^27.0.6",
-    "promise-polyfill": "^8.2.0",
-    "selenium-webdriver": "^4.0.0-beta.4",
-    "ts-loader": "^9.2.5",
-    "ts-node": "^10.1.0",
-    "typescript": "^4.3.5",
-    "webpack": "^5.48.0",
-    "webpack-cli": "^4.7.2"
+    "selenium-webdriver": "^4.0.0-beta.4"
   },
   "jest": {
     "verbose": true
