--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
 	"compilerOptions": {
-		"lib": ["es2021"],
+		"lib": ["ESNext"],
 		"noUnusedLocals": true,
 		"target": "es5",
 		"rootDir": ".",
