--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
 	"typescript.format.insertSpaceAfterKeywordsInControlFlowStatements": false,
 	"files.exclude": {
 		"**/dist/**": true,
+		"**/node_modules_pached_for_debug/**": true,
 		"**/www/**": true,
 		"**/cert/**": true,
 		"**/nginx-1.20.1/**": true
