all ts errors fix

--- a/www/.vscode/launch.json
+++ b/www/.vscode/launch.json
@@ -13,8 +13,9 @@
 			"disableNetworkCache": true,
 			"sourceMaps": true,
 			"skipFiles": [
-				"<nod e_internals>/**",
-				"**/nod e_modules/**"
+				"<node_internals>/**",
+				"**/node_modules/**",
+				"**/debug-promise.ts"
 			],
 			"vueComponentPaths": [],
 			"enableContentValidation": false,
