--- a/package.json
+++ b/package.json
@@ -39,14 +39,16 @@
     "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-typescript": "^7.8.3",
+    "@types/jquery": "^3.5.6",
+    "@types/react": "^17.0.19",
     "babel-loader": "^8.2.2",
+    "chromedriver": "^92.0.0",
+    "jest": "^27.0.6",
+    "selenium-webdriver": "^4.0.0-beta.4",
     "typescript": "^3.7.5",
     "webpack": "^5.50.0",
     "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2",
-    "chromedriver": "^92.0.0",
-    "jest": "^27.0.6",
-    "selenium-webdriver": "^4.0.0-beta.4"
+    "webpack-dev-server": "^3.11.2"
   },
   "jest": {
     "verbose": true
