--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@babel/preset-typescript": "^7.8.3",
     "@types/jquery": "^3.5.6",
     "@types/react": "^17.0.19",
+    "@types/react-dom": "^17.0.9",
     "babel-loader": "^8.2.2",
     "chromedriver": "^92.0.0",
     "jest": "^27.0.6",
