--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@babel/runtime": "^7.15.3",
     "@popperjs/core": "^2.9.2",
     "bootstrap": "^3.4.1",
     "font-awesome": "^4.7.0",
@@ -21,6 +22,7 @@
     "moment": "^2.29.1",
     "mysql2": "^2.2.5",
     "nodemailer": "^6.6.2",
+    "open": "^8.2.1",
     "parse-multipart-data": "^1.2.0",
     "popper.js": "^1.14.3",
     "react": "^17.0.2",
@@ -30,8 +32,7 @@
     "react-highlight-words": "^0.17.0",
     "reset-css": "^5.0.1",
     "sharp": "^0.28.3",
-    "summernote": "^0.8.18",
-    "@babel/runtime": "^7.15.3"
+    "summernote": "^0.8.18"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.3",
