--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@popperjs/core": "^2.9.2",
     "bootstrap": "^3.4.1",
     "font-awesome": "^4.7.0",
+    "ifdef-loader": "^2.3.0",
     "jquery": "^3.6.0",
     "moment": "^2.29.1",
     "mysql2": "^2.2.5",
