use "import type"

--- a/www/.vscode/settings.json
+++ b/www/.vscode/settings.json
@@ -4,5 +4,6 @@
 		"**/dist/**": true,
 		"**/uploads/**": true,
 		"**/fonts/**": true
-	}
+	},
+	"typescript.preferences.importModuleSpecifierEnding":"auto"
 }
