--- a/www/.vscode/settings.json
+++ b/www/.vscode/settings.json
@@ -5,5 +5,9 @@
 		"**/uploads/**": true,
 		"**/fonts/**": true
 	},
-	"typescript.preferences.importModuleSpecifierEnding":"auto"
+	"typescript.preferences.importModuleSpecifierEnding": "auto",
+	"cSpell.words": [
+		"draggable",
+		"unpublish"
+	]
 }
