--- a/www/.vscode/launch.json
+++ b/www/.vscode/launch.json
@@ -21,7 +21,7 @@
 			"enableContentValidation": false,
 			"pauseForSourceMap": true,
 			"cleanUp": false,
-			"url": "https://node-db-ui.com:1443/#n/20",
+			"url": "https://node-db-ui.com:1443/#n/5/r/1/e",
 			"userDataDir": "C:\\tmp\\userdir"
 		}
 	]
