--- a/www/.vscode/launch.json
+++ b/www/.vscode/launch.json
@@ -21,7 +21,7 @@
 			"enableContentValidation": false,
 			"pauseForSourceMap": true,
 			"cleanUp": false,
-			"url": "https://node-db-ui.com:1443/#n/4/r/5/e/f/tab/t_fields.n/6/r/new/e/j/%7B%22node_fields_linker%22%3A%7B%22id%22%3A5%7D%7D",
+			"url": "https://node-db-ui.com:1443/#n/83/r/new/e",
 			"userDataDir": "C:\\tmp\\userdir"
 		}
 	]
