--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@babel/runtime": "^7.15.3",
     "@popperjs/core": "^2.9.2",
+    "axios": "^0.22.0",
     "bootstrap": "^3.4.1",
     "font-awesome": "^4.7.0",
     "ifdef-loader": "^2.3.0",
