ask sure to leave if child forms is modified

--- a/www/.vscode/launch.json
+++ b/www/.vscode/launch.json
@@ -21,7 +21,7 @@
 			"enableContentValidation": false,
 			"pauseForSourceMap": true,
 			"cleanUp": false,
-			"url": "https://node-db-ui.com:1443/#n/11",
+			"url": "https://node-db-ui.com:1443/#n/52/r/101/e",
 			"userDataDir": "C:\\tmp\\userdir"
 		}
 	]
