--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "chromedriver": "^92.0.0",
     "jest": "^27.0.6",
     "selenium-webdriver": "^4.0.0-beta.4",
+    "snowpack": "^3.8.8",
     "typescript": "^3.7.5",
     "webpack": "^5.50.0",
     "webpack-cli": "^4.7.2",
