--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@babel/runtime": "^7.15.3",
     "@popperjs/core": "^2.9.2",
     "axios": "^0.22.0",
+    "body-parser": "^1.19.0",
     "bootstrap": "^3.4.1",
+    "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "ifdef-loader": "^2.3.0",
     "jquery": "^3.6.0",
     "moment": "^2.29.1",
+    "multer": "^1.4.3",
     "mysql2": "^2.2.5",
     "nodemailer": "^6.6.2",
     "parse-multipart-data": "^1.2.0",
