--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@babel/runtime": "^7.15.3",
     "@popperjs/core": "^2.9.2",
+    "archiver": "^5.3.0",
     "axios": "^0.22.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^3.4.1",
