--- a/package.json
+++ b/package.json
@@ -52,8 +52,8 @@
     "chromedriver": "^92.0.0",
     "jest": "^27.0.6",
     "selenium-webdriver": "^4.0.0-beta.4",
-    "snowpack": "^3.8.8",
     "typescript": "^3.7.5",
+    "vite": "^2.6.7",
     "webpack": "^5.50.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
