Revert "/// DEBUG cut of"
This reverts commit d55374a32bb8573a5321c341083480d24d976a7a.

sub lists brokes hash fix
linkeg field creation fix

--- a/www/.vscode/launch.json
+++ b/www/.vscode/launch.json
@@ -27,7 +27,7 @@
 			"enableContentValidation": false,
 			"pauseForSourceMap": true,
 			"cleanUp": false,
-			"url": "http://node-db-ui.com:3000/#n/49/r/2/e",
+			"url": "http://node-db-ui.com:3000/#n/110/r/2/e.n/6/r/new/e/j/%7B%22prior%22%3A1%2C%22node_fields_linker%22%3A%7B%22id%22%3A110%2C%22name%22%3A%22record%22%7D%7D",
 			"userDataDir": "C:\\tmp\\userdir"
 		}
 	]
