pre release fixes

--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,9 @@
 
 /www/node_modules
 /www/.cache
-/www/build
-/www/dist
-/www/dist-build
+/www/build-www-prod
+/build-debug
+/build-prod
 /www/images/uploads
 /www/uploads
 /www/js/libs/libs.js
