--- a/tsconfig-prod.json
+++ b/tsconfig-prod.json
@@ -5,14 +5,14 @@
 		"target": "esnext",
 		"rootDir": ".",
 		"baseUrl": ".",
-		"sourceMap": true,
-		"outDir": "build-debug",
-		"incremental": true,
-		"module": "UMD",
+		"sourceMap": false,
+		"outDir": "build-prod",
+		"incremental": false,
+		"module": "esnext",
 		"moduleResolution": "node",
 		"diagnostics": false,
 		"skipLibCheck": true,
-		"watch": true,
+		"watch": false,
 		"assumeChangesOnlyAffectDirectDependencies": true,
 	},
 	"typeAcquisition": {
