--- a/www/package.json
+++ b/www/package.json
@@ -1,7 +1,7 @@
 {
 	"scripts": {
 		"build": "npx vite --config vite.config.js",
-		"build-release": "npx vite build"
+		"build-release": "npx vite build --config vite.config-prod.js"
 	},
 	"browserslist": [
 		"> 6%"
