--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   ],
   "scripts": {
     "test": "jest --detectOpenHandles --verbose=true",
-    "build": "tsc -p ./"
+    "build": "tsc",
+    "build-prod": "tsc --project tsconfig-prod.json"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "-": "0.0.1",
     "@babel/runtime": "^7.15.3",
     "@popperjs/core": "^2.9.2",
     "archiver": "^5.3.0",
@@ -37,7 +39,8 @@
     "react-highlight-words": "^0.17.0",
     "reset-css": "^5.0.1",
     "sharp": "^0.28.3",
-    "summernote": "^0.8.18"
+    "summernote": "^0.8.18",
+    "tslib": "^2.3.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.3",
@@ -45,6 +48,7 @@
     "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-typescript": "^7.8.3",
+    "@rollup/plugin-typescript": "^8.3.0",
     "@types/jquery": "^3.5.6",
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
