--- a/www/.vscode/launch.json
+++ b/www/.vscode/launch.json
@@ -5,12 +5,6 @@
 	"version": "0.2.0",
 	"configurations": [
 		{
-			"name": "Attach node",
-			"port": 9229,
-			"request": "attach",
-			"type": "pwa-node"
-		},
-		{
 			"type": "pwa-chrome",
 			"request": "launch",
 			"name": "Client",
@@ -28,6 +22,26 @@
 			"pauseForSourceMap": true,
 			"cleanUp": false,
 			"url": "http://node-db-ui.com:3000/#n/4",
+			"userDataDir": "C:\\tmp\\userdir"
+		},
+		{
+			"type": "pwa-chrome",
+			"request": "launch",
+			"name": "Client prod",
+			"webRoot": "${workspaceRoot}",
+			"outFiles": [],
+			"disableNetworkCache": true,
+			"sourceMaps": true,
+			"skipFiles": [
+				"<node_internals>/**",
+				"**/node_modules/**",
+				"**/debug-promise.ts"
+			],
+			"vueComponentPaths": [],
+			"enableContentValidation": false,
+			"pauseForSourceMap": true,
+			"cleanUp": false,
+			"url": "https://node-db-ui.com:8080/#n/4",
 			"userDataDir": "C:\\tmp\\userdir"
 		}
 	]
