--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
 		"**/build-debug/**": true,
 		"**/build-prod/**": true,
 		"**/node_modules_pached_for_debug/**": true,
+		"**/node_modules": true,
 		"**/www/**": true,
 		"**/cert/**": true,
 		"**/nginx-1.20.1/**": true
