--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "google-auth-library": "^7.10.1",
     "ifdef-loader": "^2.3.0",
     "jquery": "^3.6.0",
+    "jszip": "^3.7.1",
     "moment": "^2.29.1",
     "multer": "^1.4.3",
     "mysql2": "^2.2.5",
     "nodemailer": "^6.6.2",
     "parse-multipart-data": "^1.2.0",
+    "pixi.js": "^6.1.3",
     "popper.js": "^1.14.3",
     "react": "^17.0.2",
     "react-cropper": "^2.1.8",
