events handlers registration refactored users email edit fix

--- a/www/.vscode/launch.json
+++ b/www/.vscode/launch.json
@@ -21,7 +21,7 @@
 			"enableContentValidation": false,
 			"pauseForSourceMap": true,
 			"cleanUp": false,
-			"url": "http://node-db-ui.com:3000/#n/20",
+			"url": "http://node-db-ui.com:3000/#n/4/r/81/e",
 			"userDataDir": "C:\\tmp\\userdir"
 		},
 		{
