prevent import of admin code in to bundle

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -29,8 +29,7 @@
 			"sourceMaps": false,
 			"skipFiles": [
 				"<node_internals>/**",
-				"**/node_modules/**",
-				"**/debug-promise.ts"
+				"**/node_modules/**"
 			],
 			"args": [
 				"--abort-on-uncaught-exception=true",
