--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "babel-loader": "^8.2.2",
     "chromedriver": "^92.0.0",
     "jest": "^27.0.6",
+    "rollup": "^2.60.0",
     "selenium-webdriver": "^4.0.0-beta.4",
     "typescript": "^3.7.5",
     "vite": "^2.6.7",
