--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/react-dom": "^17.0.9",
     "babel-loader": "^8.2.2",
     "chromedriver": "^92.0.0",
+    "cors": "^2.8.5",
     "jest": "^27.0.6",
     "rollup": "^2.60.0",
     "selenium-webdriver": "^4.0.0-beta.4",
