--- a/package.json
+++ b/package.json
@@ -15,25 +15,19 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "-": "0.0.1",
+    "mysql2": "^2.2.5",
     "@babel/runtime": "^7.15.3",
     "@popperjs/core": "^2.9.2",
     "archiver": "^5.3.0",
-    "axios": "^0.22.0",
+    "axios": "^1.11.0",
     "body-parser": "^1.19.0",
-    "bootstrap": "^3.4.1",
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "google-auth-library": "^7.10.1",
-    "ifdef-loader": "^2.3.0",
-    "jquery": "^3.6.0",
-    "jszip": "^3.7.1",
     "moment": "^2.29.1",
-    "multer": "^1.4.3",
-    "mysql2": "^2.2.5",
+    "multer": "^2.0.2",
     "nodemailer": "^6.6.2",
     "parse-multipart-data": "^1.2.0",
-    "pixi.js": "^6.1.3",
     "popper.js": "^1.14.3",
     "react": "^17.0.2",
     "react-cropper": "^2.1.8",
@@ -41,9 +35,8 @@
     "react-dom": "^17.0.2",
     "react-highlight-words": "^0.17.0",
     "reset-css": "^5.0.1",
-    "sharp": "^0.28.3",
-    "summernote": "^0.8.18",
-    "tslib": "^2.3.1"
+    "sharp": "^0.34.3",
+    "summernote": "^0.9.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.3",
@@ -52,20 +45,13 @@
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-typescript": "^7.8.3",
     "@rollup/plugin-typescript": "^8.3.0",
-    "@types/jquery": "^3.5.6",
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
     "babel-loader": "^8.2.2",
-    "chromedriver": "^92.0.0",
-    "cors": "^2.8.5",
-    "jest": "^27.0.6",
     "rollup": "^2.60.0",
     "selenium-webdriver": "^4.0.0-beta.4",
-    "typescript": "^3.7.5",
-    "vite": "^2.6.7",
-    "webpack": "^5.50.0",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2"
+    "typescript": "^4.2.2",
+    "vite": "^7.1.3"
   },
   "jest": {
     "verbose": true
