--- a/www/.vscode/tasks.json
+++ b/www/.vscode/tasks.json
@@ -3,7 +3,7 @@
 	"tasks": [
 		{
 			"type": "shell",
-			"command": "tsc --watch",
+			"command": "npx tsc --watch",
 			"label": "ts watch",
 			"isBackground": true,
 			"runOptions": {
