--- a/package.json
+++ b/package.json
@@ -15,19 +15,23 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "mysql2": "^2.2.5",
     "@babel/runtime": "^7.15.3",
     "@popperjs/core": "^2.9.2",
+    "@types/pg": "^8.15.5",
     "archiver": "^5.3.0",
     "axios": "^1.11.0",
     "body-parser": "^1.19.0",
+    "bootstrap": "^5.3.7",
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "google-auth-library": "^7.10.1",
+    "jquery": "^3.7.1",
     "moment": "^2.29.1",
     "multer": "^2.0.2",
+    "mysql2": "^2.2.5",
     "nodemailer": "^6.6.2",
     "parse-multipart-data": "^1.2.0",
+    "pg": "^8.16.3",
     "popper.js": "^1.14.3",
     "react": "^17.0.2",
     "react-cropper": "^2.1.8",
