--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,24 @@
 {
 	"compilerOptions": {
-		"lib": ["ESNext"],
 		"noUnusedLocals": true,
+		"moduleResolution": "nodenext",
+		"lib": ["ESNext"],
 		"target": "esnext",
 		"rootDir": ".",
 		"baseUrl": ".",
 		"sourceMap": true,
 		"outDir": "build-debug",
 		"incremental": true,
-		"module": "UMD",
-		"moduleResolution": "node",
+		"module": "nodenext",
 		"diagnostics": false,
 		"skipLibCheck": true,
 		"assumeChangesOnlyAffectDirectDependencies": true,
 	},
-	"typeAcquisition": {
-        "include": ["node"]
-    },
 	"include": ["core/index.ts", "core/events/*"],
 	"exclude": [
 		"**/www/**",
 		"**/build-prod/**",
 		"**/build-debug/**",
-		"node_modules",
-		"node_modules/**/*",
-		"**/node_modules/*",
 		"**/uploads/**",
 	]
 }
