--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
 	"version": "0.2.0",
 	"configurations": [
 		{
-			"type": "pwa-node",
+			"type": "node",
 			"request": "launch",
 			"name": "Server",
 			"sourceMaps": true,
@@ -23,7 +23,7 @@
 			"program": "${workspaceFolder}\\build-debug\\core\\index.js"
 		},
 		{
-			"type": "pwa-node",
+			"type": "node",
 			"request": "launch",
 			"name": "Server Prod",
 			"sourceMaps": false,
