--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-typescript": "^7.8.3",
+    "@eslint/js": "^9.34.0",
     "@rollup/plugin-typescript": "^8.3.0",
     "@stylistic/eslint-plugin-ts": "^4.4.1",
     "@types/react": "^17.0.19",
@@ -61,6 +62,7 @@
     "rollup": "^2.60.0",
     "selenium-webdriver": "^4.0.0-beta.4",
     "typescript": "^5.9.2",
+    "typescript-eslint": "^8.41.0",
     "vite": "^7.1.3"
   },
   "jest": {
