--- a/package.json
+++ b/package.json
@@ -35,11 +35,7 @@
     "parse-multipart-data": "^1.2.0",
     "pg": "^8.16.3",
     "popper.js": "^1.14.3",
-    "react": "^17.0.2",
-    "react-cropper": "^2.1.8",
-    "react-datetime": "^3.0.4",
-    "react-dom": "^17.0.2",
-    "react-highlight-words": "^0.21.0",
+    "preact": "^10.27.1",
     "reset-css": "^5.0.1",
     "sharp": "^0.34.3",
     "summernote": "^0.9.1"
@@ -53,8 +49,6 @@
     "@eslint/js": "^9.34.0",
     "@rollup/plugin-typescript": "^8.3.0",
     "@stylistic/eslint-plugin-ts": "^4.4.1",
-    "@types/react": "^17.0.19",
-    "@types/react-dom": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^8.41.0",
     "@typescript-eslint/parser": "^8.41.0",
     "babel-loader": "^8.2.2",
