--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "@babel/runtime": "^7.15.3",
     "@popperjs/core": "^2.9.2",
+    "@types/gapi": "^0.0.47",
+    "@types/gapi.auth2": "^0.0.61",
     "@types/pg": "^8.15.5",
     "archiver": "^5.3.0",
     "body-parser": "^1.19.0",
