--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@babel/preset-typescript": "^7.8.3",
     "@eslint/js": "^9.34.0",
     "@rollup/plugin-typescript": "^8.3.0",
+    "@stylistic/eslint-plugin": "^5.3.1",
     "@stylistic/eslint-plugin-ts": "^4.4.1",
     "@typescript-eslint/eslint-plugin": "^8.41.0",
     "@typescript-eslint/parser": "^8.41.0",
