--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@babel/runtime": "^7.15.3",
     "@popperjs/core": "^2.9.2",
+    "@types/body-parser": "^1.19.6",
     "@types/gapi": "^0.0.47",
     "@types/gapi.auth2": "^0.0.61",
     "@types/pg": "^8.15.5",
@@ -51,6 +52,10 @@
     "@rollup/plugin-typescript": "^8.3.0",
     "@stylistic/eslint-plugin": "^5.3.1",
     "@stylistic/eslint-plugin-ts": "^4.4.1",
+    "@types/bootstrap": "^5.2.10",
+    "@types/express": "^5.0.3",
+    "@types/multer": "^2.0.0",
+    "@types/summernote": "^0.8.10",
     "@typescript-eslint/eslint-plugin": "^8.41.0",
     "@typescript-eslint/parser": "^8.41.0",
     "babel-loader": "^8.2.2",
