--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
 		"sourceMap": true,
 		"outDir": "build-debug",
 		"incremental": true,
+		"strict": true,
 		"module": "nodenext",
 		"diagnostics": false,
 		"types": [],
