--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
 		"types": [],
 		"esModuleInterop": true,
 		"skipLibCheck": true,
+		"preserveConstEnums": true,
 		"assumeChangesOnlyAffectDirectDependencies": true
 	},
 	"exclude": [
