--- a/tsconfig.server-prod.json
+++ b/tsconfig.server-prod.json
@@ -15,6 +15,7 @@
 		"diagnostics": false,
 		"skipLibCheck": true,
 		"watch": false,
+		"preserveConstEnums": true,
 		"typeRoots": [
 			"./types"
 		],
