--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -14,6 +14,7 @@
 		"module": "nodenext",
 		"diagnostics": false,
 		"esModuleInterop": true,
+		"preserveConstEnums": true,
 		"skipLibCheck": true,
 		"assumeChangesOnlyAffectDirectDependencies": true,
 	},
